feat: add role management support (#107)
* feat: WIP adding roles and JWT scopes

* feat: add authorization support using admin level and roles

* chore: add go-mail dep

* feat: add remove users from role endpoint + some tweaks

* docs: changed to redoc and updated API docs

* docs: improve description for the authentication flow

* test: added a few init tests for the role controller

* test: add createRole test

* test: test role removal endpoints

* lint: fix imports in role tests
